# message-bot-test-task

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
bot_service/: Dockerfile  main.py  pyproject.toml
bot_service/src/handlers/: callback_handlers.py  message_handlers.py
bot_service/src/keyboard/: page_keyboard.py  start_keyboard.py
bot_service/src/message/: message.py
bot_service/src/utils/: utils.py
message_service/: Dockerfile  main.py  pyproject.toml  start.sh
message_service/src/application/: app.py  factory.py
message_service/src/controller/: contoller.py
message_service/src/dto/: message.py
message_service/src/exceptions/: repository_exceptions.py
message_service/src/logs/: logs.json
message_service/src/repository/: repository.py
message_service/src/service/: service.py
message_service/tests/test_dto/: test_dto.py
message_service/tests/test_repo/: conftest.py  test_repository.py
nginx/environ/: default.conf.template
