[tool.poetry]
name = "message-service"
version = "0.1.0"
description = ""
authors = ["Arkhip McNutt <ortiz47@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pymongo = "^4.8.0"
loguru = "^0.7.2"
pytz = "^2024.1"
pytest-asyncio = "^0.23.8"
motor = "^3.5.1"
pytest = "^8.3.2"
redis = "^5.0.8"
httpx = "^0.27.0"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


